--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <button id="add">Add To Do</button>
-    <button id="remove">Remove To Do</button>
+    <title>Todos</title>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <h2 class="label-wrapper">
+        <label for="userInput"> What needs to be done? </label>
+      </h2>
+      <input id="userInput" type="text" name="Add to do" />
+      <button id="add" type="submit">Add To Do</button>
+    </form>
+
+    <div>
+      <ul id="myList"></ul>
+    </div>
+
+    <button id="remove" type="reset">Remove To Do</button>
+  </body>
 </html>
