--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <ul id="myList"></ul>
     </div>
 
+    <button id="edit" type="button">Edit To Do</button>
     <button id="remove" type="reset">Remove To Do</button>
   </body>
 </html>
