--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <div>
       <ul id="myList"></ul>
     </div>
-
-    <button id="edit" type="button">Edit To Do</button>
-    <button id="remove" type="reset">Remove To Do</button>
+    <!-- 
+    <button id="edit" type="button">Edit To Do</button> -->
   </body>
 </html>
