--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <label for="userInput"> What needs to be done? </label>
       </h2>
       <input id="userInput" type="text" name="Add to do" />
-      <button id="add" type="submit">Add To Do</button>
+      <button id="add" class="add" type="submit">Add To Do ➕</button>
     </form>
 
     <div>
