--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
       <h2 class="label-wrapper">
         <label for="userInput"> What needs to be done? </label>
       </h2>
-      <input id="userInput" type="text" name="Add to do" />
-      <button id="add" class="add" type="submit">Add To Do ➕</button>
+      <div class="main">
+        <input id="userInput" type="text" name="Add to do" />
+        <button id="add" class="add" type="submit">Add To Do ➕</button>
+      </div>
     </form>
 
     <div>
-      <ul id="myList"></ul>
+      <ul id="myList" class="main"></ul>
     </div>
     <!-- 
     <button id="edit" type="button">Edit To Do</button> -->
