fixing input validation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="main">
         <input id="userInput" type="text" name="Add to do" />
         <button id="add" class="add" type="submit">Add To Do ➕</button>
-        <p id="error"></p>
+        <p class="error" id="error"></p>
       </div>
     </form>
 
